chore: remove test directory