@@ -5,11 +5,11 @@ import aura.event_based_task.model.Event;
 import aura.event_based_task.model.User;
 import aura.event_based_task.payload.ChatMessageDto;
 import aura.event_based_task.repository.ChatMessageRepository;
-import aura.event_based_task.repository.EventRepository;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.access.AccessDeniedException;
+
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 // *** FIX: Import the Transactional annotation. ***
@@ -17,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ChatService {
@@ -26,7 +25,7 @@ public class ChatService {
 
     @Autowired private ChatMessageRepository chatMessageRepository;
     @Autowired private EventService eventService;
-    @Autowired private EventRepository eventRepository;
+
 
     @PreAuthorize("hasPermission(#eventId, 'Event', 'MEMBER')")
     // *** FIX: Make the entire method a single database transaction. ***
@@ -57,7 +56,7 @@ public class ChatService {
         logger.debug("Retrieved {} messages for event {}", messages.size(), eventId);
         return messages.stream()
                 .map(msg -> new ChatMessageDto(msg.getSender().getUsername(), msg.getContent()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
